feat(config): add CLAUDE.md and improve Docker configuration
- Add CLAUDE.md with Git commit rules and project guidelines
- Remove version from docker-compose.dev.yml (deprecated)
- Add customizable port configuration via environment variables
- Update .env.example with all Docker service ports at top
- Update README.md with port customization instructions

All Docker service ports are now configurable:
- POSTGRES_PORT (default: 5432)
- REDIS_PORT (default: 6379)
- BACKEND_PORT (default: 3000)
- FRONTEND_PORT (default: 5173)
- ADMINER_PORT (default: 8080)

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,10 @@
+# Docker 服務連接埠設定 (可自定義調整)
+POSTGRES_PORT=5432
+REDIS_PORT=6379
+BACKEND_PORT=3000
+FRONTEND_PORT=5173
+ADMINER_PORT=8080
+
 # 資料庫配置
 DATABASE_URL="postgresql://user:password@localhost:5432/musicplayer"
 POSTGRES_USER=user
