--- a/backend/package.json
+++ b/backend/package.json
@@ -20,46 +20,46 @@
     "docker:db": "docker-compose -f docker-compose.dev.yml up -d postgres redis"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "cors": "^2.8.5",
-    "helmet": "^7.0.0",
-    "compression": "^1.7.4",
-    "morgan": "^1.10.0",
-    "express-rate-limit": "^6.8.1",
-    "winston": "^3.10.0",
-    "bcrypt": "^5.1.0",
-    "jsonwebtoken": "^9.0.1",
-    "joi": "^17.9.2",
-    "cookie-parser": "^1.4.6",
-    "ioredis": "^5.3.2",
     "@prisma/client": "^5.1.1",
+    "bcrypt": "^5.1.0",
+    "compression": "^1.8.1",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.21.2",
+    "express-rate-limit": "^6.11.2",
+    "helmet": "^7.2.0",
+    "ioredis": "^5.3.2",
+    "joi": "^17.9.2",
+    "jsonwebtoken": "^9.0.1",
+    "morgan": "^1.10.1",
     "prisma": "^5.1.1",
     "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.0",
-    "dotenv": "^16.3.1"
+    "swagger-ui-express": "^5.0.1",
+    "winston": "^3.17.0"
   },
   "devDependencies": {
-    "@types/express": "^4.17.17",
-    "@types/cors": "^2.8.13",
-    "@types/compression": "^1.7.2",
-    "@types/morgan": "^1.9.4",
     "@types/bcrypt": "^5.0.0",
-    "@types/jsonwebtoken": "^9.0.2",
+    "@types/compression": "^1.8.1",
     "@types/cookie-parser": "^1.4.3",
+    "@types/cors": "^2.8.19",
+    "@types/express": "^4.17.23",
+    "@types/jest": "^29.5.3",
+    "@types/jsonwebtoken": "^9.0.2",
+    "@types/morgan": "^1.9.10",
+    "@types/node": "^20.4.5",
+    "@types/supertest": "^2.0.12",
     "@types/swagger-jsdoc": "^6.0.1",
     "@types/swagger-ui-express": "^4.1.3",
-    "@types/node": "^20.4.5",
-    "@types/jest": "^29.5.3",
-    "@types/supertest": "^2.0.12",
-    "typescript": "^5.1.6",
-    "tsx": "^3.12.7",
-    "jest": "^29.6.1",
-    "ts-jest": "^29.1.1",
-    "supertest": "^6.3.3",
-    "eslint": "^8.45.0",
     "@typescript-eslint/eslint-plugin": "^6.2.0",
     "@typescript-eslint/parser": "^6.2.0",
-    "prettier": "^3.0.0"
+    "eslint": "^8.45.0",
+    "jest": "^29.6.1",
+    "prettier": "^3.0.0",
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.1.1",
+    "tsx": "^3.12.7",
+    "typescript": "^5.1.6"
   },
   "engines": {
     "node": ">=18.0.0"
