--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,17 +14,19 @@
     "type-check": "vue-tsc --noEmit"
   },
   "dependencies": {
-    "vue": "^3.3.4",
-    "vue-router": "^4.2.4",
-    "pinia": "^2.1.6",
-    "axios": "^1.4.0",
     "@vueuse/core": "^10.3.0",
-    "tailwindcss": "^3.3.3",
     "autoprefixer": "^10.4.14",
-    "postcss": "^8.4.27"
+    "axios": "^1.4.0",
+    "pinia": "^2.1.6",
+    "postcss": "^8.4.27",
+    "tailwindcss": "^3.3.3",
+    "vue": "^3.3.4",
+    "vue-router": "^4.2.4"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.3.4",
+    "@vitest/coverage-c8": "^0.33.0",
+    "@vitest/ui": "^0.34.1",
     "@vue/eslint-config-prettier": "^8.0.0",
     "@vue/eslint-config-typescript": "^11.0.3",
     "@vue/test-utils": "^2.4.1",
@@ -36,9 +38,7 @@
     "typescript": "~5.1.6",
     "vite": "^4.4.9",
     "vitest": "^0.34.1",
-    "vue-tsc": "^1.8.8",
-    "@vitest/ui": "^0.34.1",
-    "@vitest/coverage-c8": "^0.33.0"
+    "vue-tsc": "^1.8.8"
   },
   "engines": {
     "node": ">=18.0.0"
