--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@prisma/client": "^5.1.1",
+    "axios": "^1.11.0",
     "bcrypt": "^5.1.0",
     "compression": "^1.8.1",
     "cookie-parser": "^1.4.6",
