--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "type-check": "vue-tsc --noEmit"
   },
   "dependencies": {
+    "@types/sortablejs": "^1.15.8",
     "@vueuse/core": "^10.3.0",
     "autoprefixer": "^10.4.14",
     "axios": "^1.4.0",
@@ -21,7 +22,8 @@
     "postcss": "^8.4.27",
     "tailwindcss": "^3.3.3",
     "vue": "^3.3.4",
-    "vue-router": "^4.2.4"
+    "vue-router": "^4.2.4",
+    "vuedraggable": "^2.24.3"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.3.4",
