--- a/backend/package.json
+++ b/backend/package.json
@@ -7,9 +7,12 @@
     "dev": "tsx watch src/server.ts",
     "build": "tsc",
     "start": "node dist/server.js",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage",
+    "test": "vitest",
+    "test:watch": "vitest --watch",
+    "test:coverage": "vitest --coverage",
+    "test:ui": "vitest --ui",
+    "test:run": "vitest run",
+    "test:performance": "vitest run src/test/performance.test.ts",
     "lint": "eslint src --ext .ts --fix",
     "type-check": "tsc --noEmit",
     "db:migrate": "prisma migrate dev",
@@ -46,7 +49,6 @@
     "@types/cookie-parser": "^1.4.3",
     "@types/cors": "^2.8.19",
     "@types/express": "^4.17.23",
-    "@types/jest": "^29.5.3",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/morgan": "^1.9.10",
     "@types/node": "^20.4.5",
@@ -55,13 +57,14 @@
     "@types/swagger-ui-express": "^4.1.3",
     "@typescript-eslint/eslint-plugin": "^6.2.0",
     "@typescript-eslint/parser": "^6.2.0",
+    "@vitest/coverage-v8": "^0.34.1",
+    "@vitest/ui": "^0.34.1",
     "eslint": "^8.45.0",
-    "jest": "^29.6.1",
     "prettier": "^3.0.0",
     "supertest": "^6.3.3",
-    "ts-jest": "^29.1.1",
     "tsx": "^3.12.7",
-    "typescript": "^5.1.6"
+    "typescript": "^5.1.6",
+    "vitest": "^0.34.1"
   },
   "engines": {
     "node": ">=18.0.0"
