--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,13 @@
     "preview": "vite preview",
     "test": "vitest",
     "test:ui": "vitest --ui",
+    "test:watch": "vitest --watch",
     "test:coverage": "vitest --coverage",
+    "test:coverage:open": "vitest --coverage && open coverage/index.html",
+    "test:e2e": "playwright test",
+    "test:e2e:ui": "playwright test --ui",
+    "test:e2e:debug": "playwright test --debug",
+    "test:all": "npm run test && npm run test:e2e",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
     "type-check": "vue-tsc --noEmit"
   },
@@ -26,8 +32,9 @@
     "vuedraggable": "^2.24.3"
   },
   "devDependencies": {
+    "@playwright/test": "^1.40.0",
     "@vitejs/plugin-vue": "^4.3.4",
-    "@vitest/coverage-c8": "^0.33.0",
+    "@vitest/coverage-v8": "^0.34.1",
     "@vitest/ui": "^0.34.1",
     "@vue/eslint-config-prettier": "^8.0.0",
     "@vue/eslint-config-typescript": "^11.0.3",
@@ -35,6 +42,7 @@
     "@vue/tsconfig": "^0.4.0",
     "eslint": "^8.45.0",
     "eslint-plugin-vue": "^9.15.1",
+    "happy-dom": "^12.10.3",
     "jsdom": "^22.1.0",
     "prettier": "^3.0.0",
     "typescript": "~5.1.6",
