feat(production): implement complete production deployment system (AAI/023)
- Add production docker-compose with full monitoring stack
- Create Nginx production configuration with SSL support
- Implement comprehensive deployment and backup scripts
- Add Prometheus + Grafana + Loki monitoring solution
- Configure automated backup with S3 support
- Update documentation with production deployment guide
- Add production environment management commands

--- a/package.json
+++ b/package.json
@@ -26,7 +26,14 @@
     "setup": "bash scripts/setup.sh",
     "docker:up": "docker-compose -f docker-compose.dev.yml up -d",
     "docker:down": "docker-compose -f docker-compose.dev.yml down",
-    "docker:logs": "docker-compose -f docker-compose.dev.yml logs -f"
+    "docker:logs": "docker-compose -f docker-compose.dev.yml logs -f",
+    "deploy:staging": "bash scripts/deploy.sh staging deploy",
+    "deploy:production": "bash scripts/deploy-production.sh",
+    "prod:up": "docker-compose -f docker-compose.production.yml up -d",
+    "prod:down": "docker-compose -f docker-compose.production.yml down",
+    "prod:logs": "docker-compose -f docker-compose.production.yml logs -f",
+    "prod:status": "docker-compose -f docker-compose.production.yml ps",
+    "backup": "bash scripts/backup.sh"
   },
   "keywords": [
     "youtube",
