--- a/.env.production.example
+++ b/.env.production.example
@@ -7,6 +7,8 @@ FRONTEND_HTTPS_PORT=443
 BACKEND_PORT=3000
 POSTGRES_PORT=5432
 REDIS_PORT=6379
+PROMETHEUS_PORT=9090
+GRAFANA_PORT=3001
 
 # Database Configuration
 DATABASE_URL=postgresql://postgres:your_secure_password@localhost:5432/musicplayer
@@ -35,8 +37,16 @@ ALLOWED_ORIGINS=https://yourdomain.com,https://www.yourdomain.com
 # Backup Configuration
 BACKUP_RETENTION_DAYS=30
 
-# Monitoring (Optional)
-PROMETHEUS_PORT=9090
+# Monitoring Configuration
+GRAFANA_PASSWORD=your_secure_grafana_password
+
+# AWS S3 Backup (Optional)
+S3_BACKUP_BUCKET=your-backup-bucket
+AWS_ACCESS_KEY_ID=your_aws_access_key
+AWS_SECRET_ACCESS_KEY=your_aws_secret_key
+
+# Notification (Optional)
+SLACK_WEBHOOK_URL=https://hooks.slack.com/services/YOUR/SLACK/WEBHOOK
 
 # External Services (if needed)
 YOUTUBE_API_KEY=your_youtube_api_key_if_needed
