--- a/frontend/package.json
+++ b/frontend/package.json
@@ -45,6 +45,7 @@
     "happy-dom": "^12.10.3",
     "jsdom": "^22.1.0",
     "prettier": "^3.0.0",
+    "sass": "^1.66.1",
     "typescript": "~5.1.6",
     "vite": "^4.4.9",
     "vitest": "^0.34.1",
